# cocos2d-x-lite-source

./: CMakeLists.txt  README.md
cmake/Modules/: CocosConfigDefine.cmake
cocos/: Android.mk  CMakeLists.txt  cocos2d.h
cocos/2d/: CCCamera.cpp  CCCamera.h  CCCameraBackgroundBrush.h  CCFontAtlas.cpp  CCNode.cpp  CCSpriteFrameCache.cpp  CMakeLists.txt
cocos/audio/: CMakeLists.txt
cocos/audio/android/: Android.mk
cocos/audio/apple/: AudioCache.mm
cocos/base/: CCConfiguration.cpp  CCConfiguration.h  CCConsole.cpp  CCDirector.cpp  CCDirector.h  CMakeLists.txt  ccConfig.h
cocos/deprecated/: CMakeLists.txt
cocos/editor-support/cocosbuilder/: CCBAnimationManager.cpp  CCBMemberVariableAssigner.h  CCLabelTTFLoader.cpp  CCNode+CCBRelativePositioning.cpp  CCNodeLoader.cpp  CCNodeLoaderListener.h  CMakeLists.txt
cocos/editor-support/spine/: CMakeLists.txt
cocos/math/: CMakeLists.txt
cocos/network/: CMakeLists.txt
cocos/platform/: CCGLView.cpp  CCGLView.h  CMakeLists.txt
cocos/platform/android/: CMakeLists.txt
cocos/platform/android/java/: AndroidManifest.xml
cocos/platform/android/libcocos2dx/: build.gradle
cocos/renderer/: CCQuadCommand.cpp  CCRenderState.cpp  CCRenderer.cpp  CCRenderer.h  CMakeLists.txt
cocos/ui/: CMakeLists.txt  CocosGUI.h  UIAbstractCheckButton.cpp  UIAbstractCheckButton.h  UIButton.cpp  UIButton.h  UIImageView.cpp  UIImageView.h  UILayout.cpp  UILayout.h  UILoadingBar.cpp  UILoadingBar.h  UISlider.cpp  UISlider.h  UITextAtlas.cpp  UITextAtlas.h  UITextBMFont.cpp  UITextBMFont.h  UIVideoPlayer-android.cpp  UIVideoPlayer-ios.mm  UIVideoPlayer.h  UIWebView-inl.h  UIWebView.h
extensions/: Android.mk  CMakeLists.txt  cocos-ext.h
extensions/GUI/CCScrollView/: CCScrollView.cpp
extensions/assets-manager/: AssetsManagerEx.cpp  AssetsManagerEx.h
extensions/cocos2dx-store/: .gitignore  Android.mk  README.md  changelog.md
extensions/cocos2dx-store/Cocos2dXStore.xcodeproj/: project.pbxproj
extensions/cocos2dx-store/Cocos2dXStore.xcodeproj/project.xcworkspace/xcshareddata/: Cocos2dXStore.xcscmblueprint
extensions/cocos2dx-store/Soomla/: CCSoomlaStore.cpp  CCStoreEventDispatcher.cpp  CCStoreEventDispatcher.h
extensions/cocos2dx-store/Soomla/NativeImpl/: CCNativeStoreBridge.cpp
extensions/cocos2dx-store/Soomla/config/: CCSoomlaStoreConfigBuilder.cpp  CCSoomlaStoreConfigBuilder.h  CCSoomlaStoreGpConfigBuilder.cpp  CCSoomlaStoreGpConfigBuilder.h  CCSoomlaStoreIosConfigBuilder.cpp  CCSoomlaStoreIosConfigBuilder.h
extensions/cocos2dx-store/Soomla/data/: CCStoreInfo.cpp  CCStoreInfo.h
extensions/cocos2dx-store/Soomla/domain/: CCMarketItem.cpp  CCMarketItem.h
extensions/cocos2dx-store/development/: build_android  build_ios
extensions/cocos2dx-store/development/Cocos2dxStoreFromSources.xcodeproj/: project.pbxproj
extensions/cocos2dx-store/development/Cocos2dxStoreFromSources.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
extensions/cocos2dx-store/development/Cocos2dxStoreFromSources.xcodeproj/project.xcworkspace/xcshareddata/: Cocos2dXCore.xccheckout  Cocos2dxCoreFromSources.xccheckout  Cocos2dxStoreFromSources.xcscmblueprint
extensions/cocos2dx-store/development/soomla-native/projects/cocos2dx-android-store/: .gitignore  build_all  cocos2dx-android-store.properties  cocos2dx-android-store.xml  module_cocos2dxandroidstore.xml
extensions/cocos2dx-store/development/soomla-native/projects/cocos2dx-ios-store/: build_all  build_jsb
extensions/cocos2dx-store/development/submodules/: build_all
extensions/cocos2dx-store/development/submodules/android-store/: .gitignore  build_all  changelog.md  documentation.md
extensions/cocos2dx-store/development/submodules/android-store-google-play/: .gitignore  LICENSE  README.md  android-store-google-play.properties  android-store-google-play.xml  ant.properties  build_all  download_deps  module_androidstoregoogleplay.xml
extensions/cocos2dx-store/development/submodules/android-store/SoomlaAndroidStore/: build_all  module_soomlaandroidstore.xml  soomla-android-store.properties  soomla-android-store.xml
extensions/cocos2dx-store/development/submodules/android-store/submodules/: build_all  soomla-android-core
extensions/cocos2dx-store/development/submodules/ios-store/: .gitignore  README.md  build_all  changelog.md  documentation.md
extensions/cocos2dx-store/development/submodules/ios-store/SoomlaiOSStore.xcodeproj/: project.pbxproj
extensions/cocos2dx-store/development/submodules/ios-store/submodules/: build_all  soomla-ios-core
extensions/soomla-cocos2dx-core/: .gitignore  Android.mk  README.md  build_all  changelog.md
extensions/soomla-cocos2dx-core/Cocos2dXCore.xcodeproj/: project.pbxproj
extensions/soomla-cocos2dx-core/Soomla/: CCDomainHelper.cpp  CCJsonHelper.cpp  CCNdkBridge.cpp  CCSoomlaConfigBuilder.cpp  CCSoomlaConfigBuilder.h
extensions/soomla-cocos2dx-core/Soomla/NativeImpl/: CCNativeKeyValueStorage.cpp  CCNativeKeyValueStorage.h
extensions/soomla-cocos2dx-core/Soomla/data/: CCBridgelessKeyValueStorage.cpp  CCBridgelessKeyValueStorage.h  CCKeyValueStorage.h
extensions/soomla-cocos2dx-core/Soomla/rewards/: CCAggregateReward.cpp
extensions/soomla-cocos2dx-core/development/: build_all  build_android  build_ios
extensions/soomla-cocos2dx-core/development/Cocos2dxCoreFromSources.xcodeproj/: project.pbxproj
extensions/soomla-cocos2dx-core/development/Cocos2dxCoreFromSources.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
extensions/soomla-cocos2dx-core/development/soomla-native/projects/cocos2dx-android-core/: build_all  cocos2dx-android-core.properties  cocos2dx-android-core.xml  module_cocos2dxandroidcore.xml
extensions/soomla-cocos2dx-core/development/submodules/: build_all
extensions/soomla-cocos2dx-core/development/submodules/soomla-android-core/: .gitignore  README.md  build_all  changelog.md  download_deps  module_soomlaandroidcore.xml  soomla-android-core.properties  soomla-android-core.xml
extensions/soomla-cocos2dx-core/development/submodules/soomla-ios-core/: .gitignore  README.md  build_all  changelog.md
(+40 files in other folders)
