cmake_minimum_required(VERSION 3.6)

project(cc_2d)
add_library(${PROJECT_NAME} "")
target_sources(${PROJECT_NAME} PRIVATE
    CCActionCamera.cpp
    CCActionCatmullRom.cpp
    CCAction.cpp
    CCActionEase.cpp
    CCActionGrid3D.cpp
    CCActionGrid.cpp
    CCActionInstant.cpp
    CCActionInterval.cpp
    CCActionManager.cpp
    CCActionPageTurn3D.cpp
    CCActionProgressTimer.cpp
    CCActionTiledGrid.cpp
    CCActionTween.cpp
    CCAnimationCache.cpp
    CCAnimation.cpp
    CCAtlasNode.cpp
    CCCamera.cpp
    CCCameraBackgroundBrush.cpp
    CCClippingNode.cpp
    CCClippingRectangleNode.cpp
    CCComponentContainer.cpp
    CCComponent.cpp
    CCDrawingPrimitives.cpp
    CCDrawNode.cpp
    CCFastTMXLayer.cpp
    CCFastTMXTiledMap.cpp
    CCFontAtlasCache.cpp
    CCFontAtlas.cpp
    CCFontCharMap.cpp
    CCFont.cpp
    CCFontFNT.cpp
    CCFontFreeType.cpp
    CCGLBufferedNode.cpp
    CCGrabber.cpp
    CCGrid.cpp
    CCLabelAtlas.cpp
    CCLabelBMFont.cpp
    CCLabel.cpp
    CCLabelTextFormatter.cpp
    CCLabelTTF.cpp
    CCLayer.cpp
    CCLight.cpp
    CCMenu.cpp
    CCMenuItem.cpp
    CCMotionStreak.cpp
    CCNode.cpp
    CCNodeGrid.cpp
    CCParallaxNode.cpp
    CCParticleBatchNode.cpp
    CCParticleExamples.cpp
    CCParticleSystem.cpp
    CCParticleSystemQuad.cpp
    CCProgressTimer.cpp
    CCProtectedNode.cpp
    CCRenderTexture.cpp
    CCScene.cpp
    CCSpriteBatchNode.cpp
    CCSprite.cpp
    CCSpriteFrameCache.cpp
    CCSpriteFrame.cpp
    CCAutoPolygon.cpp
    CCTextFieldTTF.cpp
    CCTileMapAtlas.cpp
    CCTMXLayer.cpp
    CCTMXObjectGroup.cpp
    CCTMXTiledMap.cpp
    CCTMXXMLParser.cpp
    CCTransition.cpp
    CCTransitionPageTurn.cpp
    CCTransitionProgress.cpp
    CCTweenFunction.cpp
)
target_include_directories(${PROJECT_NAME} PUBLIC ..)
target_link_libraries(${PROJECT_NAME}
    cc_math
    cc_ext_clipper
    cc_ext_edtaa3func
    cc_ext_freetype
    cc_ext_poly2tri
)